[gd_scene load_steps=3 format=3 uid="uid://dagmidjv1s8uk"]

[ext_resource type="Script" path="res://node_2d.gd" id="1_qcaxh"]

[sub_resource type="FontFile" id="FontFile_jdurf"]
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/30/0/ascent = 0.0
cache/0/30/0/descent = 0.0
cache/0/30/0/underline_position = 0.0
cache/0/30/0/underline_thickness = 0.0
cache/0/30/0/scale = 1.0
cache/0/50/0/ascent = 0.0
cache/0/50/0/descent = 0.0
cache/0/50/0/underline_position = 0.0
cache/0/50/0/underline_thickness = 0.0
cache/0/50/0/scale = 1.0
cache/0/60/0/ascent = 0.0
cache/0/60/0/descent = 0.0
cache/0/60/0/underline_position = 0.0
cache/0/60/0/underline_thickness = 0.0
cache/0/60/0/scale = 1.0

[node name="Node2D" type="Node2D"]
script = ExtResource("1_qcaxh")

[node name="Button" type="Button" parent="."]
offset_left = 238.0
offset_top = 380.0
offset_right = 476.0
offset_bottom = 492.0
text = "Yes"

[node name="Button2" type="Button" parent="."]
offset_left = 662.0
offset_top = 379.0
offset_right = 875.0
offset_bottom = 492.0
text = "No"

[node name="Label" type="Label" parent="."]
offset_left = 226.0
offset_top = 109.0
offset_right = 907.0
offset_bottom = 211.0
theme_override_fonts/font = SubResource("FontFile_jdurf")
theme_override_font_sizes/font_size = 60
text = "Will you be my Valentine?"

[node name="Label2" type="Label" parent="."]
offset_left = 448.0
offset_top = 249.0
offset_right = 681.0
offset_bottom = 339.0
text = "You choose: "
horizontal_alignment = 1

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
